--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -5,7 +5,7 @@
     <h2>Upload Course Details</h2>
     <form id="uploadCourseForm" action="{{ url_for('admin_uploadCourseDetails') }}" method="POST" enctype="multipart/form-data">
         <div class="profile-frame">
-            <div class="form-left" style="margin: auto;">
+            <div class="form-left">
                 <label for="course_list">
                     <div class="upload-container">
                         <div class="upload-text">Upload file format with according format
