--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -18,7 +18,7 @@
                 <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
             </div>
 
-            <div class="form-right">
+            <div class="form-right" style="width: 30%;">
                 <table>
                     <tr>
                         <th>Field</th>
