--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -19,7 +19,8 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <table>
+                <table class="user-data-table">
+                    <br>
                     <tr>
                         <th>Field</th>
                         <th>Input</th>
