--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -19,8 +19,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <table class="user-data-table">
-                    <br>
+                <table class="user-data-table" style="text-align: center; padding: 1%;">
                     <tr>
                         <th>Field</th>
                         <th>Input</th>
