--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -19,22 +19,22 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <table class="user-data-table" style="text-align: center; padding: 1%;">
-                    <tr>
+                <table class="user-data-table">
+                    <tr style="text-align: center;">
                         <th>Field</th>
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label for="courseCode">Course Code</label></td>
-                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
+                        <td style="padding: 1%;"><label for="courseCode">Course Code</label></td>
+                        <td style="padding: 1%;"><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseName">Course Name</label></td>
-                        <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
+                        <td style="padding: 1%;"><label for="courseName">Course Name</label></td>
+                        <td style="padding: 1%;"><input type="text" name="courseName" value="{{ courseName_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseHour">Course Credit Hours</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td style="padding: 1%;"><label for="courseHour">Course Credit Hours</label></td>
+                        <td style="padding: 1%;"><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
                     </tr>
                 </table>
             </div>
