--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -288,6 +288,7 @@ form {
     width: 40%;
     display: flex;
     flex-direction: column;
+    margin: auto;
 }
 
 .input-container, .password-container {
