--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -6,7 +6,7 @@
     <form id="uploadCourseForm" action="{{ url_for('admin_uploadCourseDetails') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new course details</h3>
         <div class="profile-frame">
-            <div class="form-left" style="margin: auto;">
+            <div class="form-left">
                 <label for="course_list">
                     <div class="upload-container">
                         <div class="upload-text">Upload file format with according format
