--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -53,10 +53,9 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-
-        <!-- Submit button -->
+        <br>
         <div class="button-wrapper">
-            <button type="submit">Upload</button>
+                <button type="submit">Submit</button>
         </div>
     </form>
 
