--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -40,24 +40,27 @@
                 </table>
             </div>
         </div>
+        <br>
 
 
         <!-- Result feedback -->
-        {% if submission_type == 'file' %}
-            <div id="courseUploadResult" class="result-message">{{ result_message }}</div>
-            <div id="courseUploadErrors" class="error-message">{{ error_message }}</div>
-        {% else %}
+        <div id="examUploadResult" class="result-message"></div>
+        <div id="examUploadErrors" class="error-message"></div>
+        
+        {% if submission_type == 'manual' %}
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}">
-                            <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                        </div>
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
                     {% endfor %}
                 {% endif %}
             {% endwith %}
         {% endif %}
         <br>
+
+        
         <div class="button-wrapper">
                 <button type="submit">Submit</button>
         </div>
