--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -31,6 +31,10 @@
                         <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
                     </tr>
                     <tr>
+                        <td><label for="courseSection">Course Section</label></td>
+                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
+                    </tr>
+                    <tr>
                         <td><label for="courseName">Course Name</label></td>
                         <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
                     </tr>
