--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -95,6 +95,7 @@
                 <tr>
                     <th>No</th>
                     <th>Course Code</th>
+                    <th>Course Section</th>
                     <th>Course Name</th>
                     <th>Credit Hour(s)</th>
                 </tr>
@@ -105,6 +106,7 @@
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <!-- <td>{{ row.examID  }}</td> -->
                     <td>{{ row.courseCode }}</td>
+                    <td>{{ row.courseSection }}</td>
                     <td>{{ row.courseName }}</td>
                     <td>{{ row.courseHour }}</td>
                 </tr>
