--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -65,7 +65,7 @@
 
 
         <div class="button-wrapper">
-                <button type="submit">Submit</button>
+                <button type="submit">Update</button>
         </div>
     </form>
 
