--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -36,9 +36,9 @@
                     <i class="fas fa-file-alt"></i>
                     <span>Upload Exam Sessions</span>
                 </a>
-                <a href="{{ url_for('admin_uploadCourseDetails') }}" class="tab-link {% if active_tab == 'admin_uploadCourseDetailstab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageCourseDetails') }}" class="tab-link {% if active_tab == 'admin_manageCourseDetailstab' %}active{% endif %}">
                     <i class="fas fa-book"></i>
-                    <span>Upload Course Details</span>
+                    <span>Manage Course Details</span>
                 </a>
                 <a href="{{ url_for('admin_autoGenerate') }}" class="tab-link {% if active_tab == 'admin_autoGeneratetab' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
