--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -48,7 +48,7 @@
     <!-- Row 1 First Fesatures to upload merge schedule files--> 
     <div class="menu-section">
         <!--   <h2>Upload File</h2><br>  -->
-        <a href="{{ url_for('admin_uploadCourseDetails')}}" style="text-decoration: none;"><h2>Upload Course Details</h2></a>
+        <a href="{{ url_for('admin_manageCourse')}}" style="text-decoration: none;"><h2>Manage Course Details</h2></a>
         <li class="submenu">
             <strong>  Purpose:</strong>
             <ul>    
