--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -1,9 +1,9 @@
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Admin UploadCourse{% endblock %}
+{% block title %}Admin ManageCourse{% endblock %}
 {% block content %}
 <div class="menu-section">
     <h2>Upload Course Details</h2>
-    <form id="uploadCourseForm" action="{{ url_for('admin_uploadCourseDetails') }}" method="POST" enctype="multipart/form-data">
+    <form id="uploadCourseForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new course details</h3>
         <div class="profile-frame">
             <input type="hidden" id="submissionType" name="submission_type" value="manual">
