--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -2,7 +2,7 @@
 {% block title %}Admin ManageCourse{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Upload Course Details</h2>
+    <h2>Manage Course</h2>
     <form id="uploadCourseForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new course details</h3>
         <div class="profile-frame">
