--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -232,6 +232,8 @@ html, body {
 }
 
 .user-data-table td {
+    padding: 1%;
+    border-bottom: 1px solid #e0e0e0;
     color: #333;
     font-size: 0.95em;
 }
