--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <table class="data-table">
+                <table class="user-data-table" style="padding:0%; border-bottom: 0%;">
                     <tr style="text-align: center;">
                         <th>Field</th>
                         <th>Input</th>
