--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -11,10 +11,9 @@
                 <label for="course_list">
                     <div class="upload-container">
                         <div class="upload-text">
-                            Upload a file with an empty first row. 
-                            <br>Data should start from columns A to D, 
-                            <br>labeled as: 'code', 'section', 'name', and 'creditHour'
-                            <br><br>Click to upload or drag and drop with below file format
+                            Upload a file with an empty first row. Data should start from columns A to D,<br> 
+                            labeled as: 'code', 'section', 'name', and 'creditHour'<br><br>
+                            Click to upload or drag and drop with below file format
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
                         <!-- Selected file display -->
