--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -50,10 +50,9 @@
         </div>
         <br>
 
-
         <!-- Result feedback -->
-        <div id="examUploadResult" class="result-message"></div>
-        <div id="examUploadErrors" class="error-message"></div>
+        <div id="courseUploadResult" class="result-message"></div>
+        <div id="courseUploadErrors" class="error-message"></div>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -65,7 +64,6 @@
             {% endif %}
         {% endwith %}
         <br>
-
 
         <div class="button-wrapper">
                 <button type="submit">Update</button>
