--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -73,9 +73,8 @@
         </li>
     </div>
 
-    <!-- Row 2 Second on managing lecturers-->
+    <!-- Row 2 Second on managing lecturers
     <div class="menu-section">
-    <!-- <h2>Settings</h2> -->
         <a href="{{ url_for('admin_manageLecturer')}}" style="text-decoration: none;"><h2>Assign Lecturer</h2></a>
         <li class="submenu">
             <strong>  Account Controls: </strong>
@@ -85,7 +84,7 @@
                 <li>Review dean accounts</li>
             </ul>
         </li>
-    </div>
+    </div>-->
 </div>
 <br>
 
