--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -51,8 +51,8 @@
         <br>
 
         <!-- Result feedback -->
-        <div id="courseUploadResult" class="result-message"></div>
-        <div id="courseUploadErrors" class="error-message"></div>
+        <div id="examUploadResult" class="result-message"></div>
+        <div id="examUploadErrors" class="error-message"></div>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
