--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -9,7 +9,7 @@
             <input type="hidden" id="submissionType" name="submission_type" value="manual">
             <div class="form-left">
                 <label for="course_list">
-                    <div class="upload-container">
+                    <div class="upload-container" id="courseUploadContainer">   
                         <div class="upload-text">
                             Upload a file with an empty first row. Data should start from columns A to D,<br> 
                             labeled as: 'code', 'section', 'name', and 'creditHour'<br><br><br>
@@ -17,7 +17,7 @@
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
                         <!-- Selected file display -->
-                        <div id="selectedFileName" class="file-name-display"></div>
+                        <div id="courseSelectedFileName" class="file-name-display"></div>
                     </div>
                 </label>
                 <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
@@ -51,8 +51,8 @@
         <br>
 
         <!-- Result feedback -->
-        <div id="examUploadResult" class="result-message"></div>
-        <div id="examUploadErrors" class="error-message"></div>
+        <div id="courseUploadResult" class="result-message"></div>
+        <div id="courseUploadErrors" class="error-message"></div>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
