--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -30,19 +30,19 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label for="courseCode">Course Code</label></td>
+                        <td><label>Course Code</label></td>
                         <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseSection">Course Section</label></td>
+                        <td><label>Course Section</label></td>
                         <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseName">Course Name</label></td>
+                        <td><label>Course Name</label></td>
                         <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseHour">Course Credit Hours</label></td>
+                        <td><label>Course Credit Hours</label></td>
                         <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
                     </tr>
                 </table>
