--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -1,9 +1,9 @@
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Admin ManageExamSessions{% endblock %}
+{% block title %}Admin ManageExam{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Manage Exam Sessions</h2>
-    <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
+    <h2>Manage Exam</h2>
+    <form id="uploadExamForm" action="{{ url_for('admin_uploadExam') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new course</h3>
         <div class="profile-frame">
             <input type="hidden" id="submissionType" name="submission_type" value="manual">
@@ -30,40 +30,40 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label for="courseCode">Exam Date</label></td>
-                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
+                        <td><label>Exam Date</label></td>
+                        <td><input type="text" name="examDate" value="{{ examDate_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseSection">Exam Day</label></td>
-                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
+                        <td><label>Exam Day</label></td>
+                        <td><input type="text" name="examDay" value="{{ examDay_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseName">Start Time</label></td>
-                        <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
+                        <td><label>Start Time</label></td>
+                        <td><input type="text" name="startTime" value="{{ startTime_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseHour">End Time</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td><label>End Time</label></td>
+                        <td><input type="number" name="endTime" value="{{ endTime_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseHour">Program Code</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td><label>Program Code</label></td>
+                        <td><input type="number" name="programCode" value="{{ programCode_text }}"></td>
                     </tr>                    
                     <tr>
-                        <td><label for="courseHour">Course/Section</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td><label>Course/Section</label></td>
+                        <td><input type="number" name="courseSection" value="{{ courseSection_text }}"></td>
                     </tr>                    
                     <tr>
-                        <td><label for="courseHour">Lecturer</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td><label>Lecturer</label></td>
+                        <td><input type="number" name="lecturer" value="{{ lecturer_text }}"></td>
                     </tr>                    
                     <tr>
-                        <td><label for="courseHour">No. of Students</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td><label>No. of Students</label></td>
+                        <td><input type="number" name="student" value="{{ student_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label for="courseHour">Venue</label></td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                        <td><label>Venue</label></td>
+                        <td><input type="number" name="venue" value="{{ venue_text }}"></td>
                     </tr>
                 </table>
             </div>
