--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -43,19 +43,19 @@
                     </tr>
                     <tr>
                         <td><label>End Time</label></td>
-                        <td><input type="number" name="endTime" value="{{ endTime_text }}"></td>
+                        <td><input type="text" name="endTime" value="{{ endTime_text }}"></td>
                     </tr>
                     <tr>
                         <td><label>Program Code</label></td>
-                        <td><input type="number" name="programCode" value="{{ programCode_text }}"></td>
+                        <td><input type="text" name="programCode" value="{{ programCode_text }}"></td>
                     </tr>                    
                     <tr>
                         <td><label>Course/Section</label></td>
-                        <td><input type="number" name="courseSection" value="{{ courseSection_text }}"></td>
+                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
                     </tr>                    
                     <tr>
                         <td><label>Lecturer</label></td>
-                        <td><input type="number" name="lecturer" value="{{ lecturer_text }}"></td>
+                        <td><input type="text" name="lecturer" value="{{ lecturer_text }}"></td>
                     </tr>                    
                     <tr>
                         <td><label>No. of Students</label></td>
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td><label>Venue</label></td>
-                        <td><input type="number" name="venue" value="{{ venue_text }}"></td>
+                        <td><input type="text" name="venue" value="{{ venue_text }}"></td>
                     </tr>
                 </table>
             </div>
