--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -30,7 +30,7 @@
                     </tr>
                     <tr>
                         <td><label>Exam Date</label></td>
-                        <td><input type="text" name="examDate" value="{{ examDate_text }}"></td>
+                        <td>  <input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
                     </tr>
                     <tr>
                         <td><label>Exam Day</label></td>
