--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -34,7 +34,7 @@
                     </tr>
                     <tr>
                         <td><label>Exam Day</label></td>
-                        <td><input type="text" name="examDay" value="{{ examDay_text }}"></td>
+                        <input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly>
                     </tr>
                     <tr>
                         <td><label>Start Time</label></td>
