--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -30,11 +30,11 @@
                     </tr>
                     <tr>
                         <td><label>Exam Date</label></td>
-                        <td>  <input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
+                        <td><input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
                     </tr>
                     <tr>
                         <td><label>Exam Day</label></td>
-                        <input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly>
+                        <td><input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly></td>
                     </tr>
                     <tr>
                         <td><label>Start Time</label></td>
