--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -29,13 +29,17 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label>Exam Date</label></td>
-                        <td><input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
+                        <td><label>Exam Date and Day</label></td>
+                        <td><input type="hidden" name="examDate" id="examDateHidden"></td>
+                        <td><input type="text" name="examDisplay" id="examDisplay" readonly></td>
                     </tr>
+                        <!--<td><input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
+                    
                     <tr>
                         <td><label>Exam Day</label></td>
-                        <td><input type="text" name="examDay" id="examDay" value="{{ examDay_text }}"readonly></td>
+                        <td><input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly></td>
                     </tr>
+                    -->
                     <tr>
                         <td><label>Start Time</label></td>
                         <td><input type="text" name="startTime" value="{{ startTime_text }}"></td>
