--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -31,8 +31,10 @@
                     <tr>
                         <td><label>Exam Date</label></td>
                         <td>
-                            <input type="date" id="examDatePicker" style="display:none;">
-                            <input type="text" id="examDateDisplay" readonly placeholder="Select a date">
+                            <input type="date" id="examDatePicker">
+                            <span id="dayText" style="margin-left:10px;"></span>
+
+                            <!-- Hidden inputs to submit formatted values -->
                             <input type="hidden" name="examDate" id="examDate">
                             <input type="hidden" name="examDay" id="examDay">
                         </td>
