--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -30,22 +30,11 @@
                     </tr>
                     <tr>
                         <td><label>Exam Date</label></td>
-                        <td>
-                            <input type="date" id="examDatePicker">
-                            <span id="dayText" style="margin-left:10px;"></span>
-
-                            <!-- Hidden inputs to submit formatted values -->
-                            <input type="hidden" name="examDate" id="examDate">
-                            <input type="hidden" name="examDay" id="examDay">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label>Exam Date</label></td>
-                        <td><input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
+                        <td><input type="date" name="examDate" id="examDate" value="{{ examDate_text }} {{ examDate_text }}"></td>
                     </tr>
                     <tr>
                         <td><label>Exam Day</label></td>
-                        <td><input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly></td>
+                        <td><input type="hidden" name="examDay" id="examDay" value="{{ examDate_text }}" readonly></td>
                     </tr>
                     <tr>
                         <td><label>Start Time</label></td>
