--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -31,8 +31,8 @@
                     <tr>
                         <td><label>Exam Date</label></td>
                         <td>
-                            <input type="date" name="examDate" id="examDate" value="{{ examDate_text }} {{ examDate_text }}">
-                            <input type="hidden" name="examDay" id="examDay" value="{{ examDate_text }}" readonly>
+                            <input type="date" name="examDate" id="examDate" value="{{ examDate_text }} {{ examDay_text }}">
+                            <input type="hidden" name="examDay" id="examDay" value="{{ examDay_text }}" readonly>
                         </td>
                     </tr>
                     <!--<tr>
