--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -31,11 +31,12 @@
                     <tr>
                         <td><label>Exam Date</label></td>
                         <td>
-                            <input type="date" name="examDate" id="examDate">
-                            <input type="hidden" name="examDay" id="examDay" readonly>
-                            <input type="text" id="examDisplay" name="examDisplay" readonly placeholder="YYYY-MM-DD DAY">
+                            <input type="text" name="examDisplay" id="examDisplay" placeholder="YYYY-MM-DD DAY" readonly>
+                            <input type="hidden" name="examDate" id="examDate">
+                            <input type="hidden" name="examDay" id="examDay">
                         </td>
                     </tr>
+
                     <!--
                     <tr>
                         <td><label>Exam Date</label></td>
